# thesis

./: README.md
release/backend/: index.php
release/backend/css/: layout.css  reset.css
release/backend/include/: connection.php  functions.php
release/backend/plugins/train/: functions.php  list.csv  main.php  menu.php
release/backend/scripts/: main.js
release/camNode/: CMakeCache.txt  CMakeLists.txt  Makefile  THESIS.cbp  cmake_install.cmake
release/camNode/src/: camera_calibration.cpp  camerascanner.cpp  camerascanner.h  config.cpp  cvserver.h  main.cpp  streamgrid.cpp  streamgrid.h  zeromq_tools.cpp
release/camServer/: CMakeCache.txt  CMakeLists.txt  Makefile  camServer  cmake_install.cmake
release/camServer/src/: camserver.cpp  camserver.h  config.h  cvclient.cpp  cvclient.h  depthpeopledetector.cpp  depthpeopledetector.h  interfaces.cpp  interfaces.h  main.cpp  streamgrid.cpp  streamgrid.h  zeromq_tools.cpp  zeromq_tools.h
setup/: FindZeroMQ.cmake  avahi-zeroconf.sh  curlpp.sh  opencv-install.sh  zeromq-install.sh
testing/testNode/: CMakeCache.txt  CMakeLists.txt  Makefile  THESIS_TESTSUITE.cbp  cmake_install.cmake
testing/testNode/src/: camera_calibration.cpp  camerascanner.cpp  config.cpp  config.h  cvserver.cpp  main.cpp  stereotools.cpp  stereotools.h
testing/trainframe_emu/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  trainframe_emu
testing/trainframe_emu/src/: cvclient.cpp  cvclient.h  depthpeopledetector.cpp  depthpeopledetector.h  interfaces.cpp  interfaces.h  main.cpp  zeromq_tools.cpp  zeromq_tools.h
